--- a/example/src/main/res/layout/video_surfaceview.xml
+++ b/example/src/main/res/layout/video_surfaceview.xml
@@ -63,13 +63,28 @@
             android:layout_toRightOf="@+id/scale_type" />
     </RelativeLayout>
 
-    <com.appunite.ffmpeg.FFmpegSurfaceView
-        android:id="@+id/video_view"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <LinearLayout
         android:layout_above="@+id/controls"
         android:layout_below="@+id/streams"
-        android:visibility="visible" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.appunite.ffmpeg.FFmpegSurfaceView
+            android:id="@+id/video_view1"
+            android:layout_width="0dip"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:visibility="visible" />
+
+        <com.appunite.ffmpeg.FFmpegSurfaceView
+            android:id="@+id/video_view2"
+            android:layout_width="0dip"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:visibility="visible" />
+
+
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/loading_view"
